# apple-product-detect

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  mapper.rs  monitor.rs  push.rs  utils.rs
