[package]
name = "iPhone-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["blocking", "json" ] }
anyhow = "1.0.65"
lazy_static = "1.4.0"
dialoguer = "0.10.2"
clokwerk = "0.3.5"
confy = "0.5.0"
dirs = "4.0"